# paass-lc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  doxyfile
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  issue_template.md  pull_request_template.md
Acquisition/: CMakeLists.txt
Acquisition/Interface/: CMakeLists.txt
Acquisition/Interface/include/: AcqConfig.hpp  AcqInterface.hpp  AcquisitionConfig.hpp  AcquisitionInterface.hpp  EmulatedInterface.hpp  PixieInterface.h  PixieSupport.h
Acquisition/Interface/source/: AcqConfig.cpp  AcqInterface.cpp  AcquisitionConfig.cpp  AcquisitionInterface.cpp  CMakeLists.txt  EmulatedInterface.cpp  Lock.cpp  PixieInterface.cpp  PixieSupport.cpp
Acquisition/Interface/tests/: CMakeLists.txt  unittest-AcquisitionConfig.cpp
Acquisition/Interface/tests/test-xml-files/: missing-bit.xml  missing-firmware-child.xml  missing-frequency.xml  missing-module-type.xml  missing-pixie-base-dir.xml  missing-revision.xml  no-errors.xml  too-many-modules.xml
Acquisition/MCA/: CMakeLists.txt
Acquisition/MCA/include/: MCA.h  MCA_ROOT.h  Mca.hpp  McaRoot.hpp
Acquisition/MCA/source/: CMakeLists.txt  MCA.cpp  MCA_ROOT.cpp  MCA_exec.cpp  Mca.cpp  McaRoot.cpp  mcaMain.cpp
Acquisition/Poll/include/: poll2_core.h
Acquisition/Poll/source/: CMakeLists.txt  listener.cpp  monitor.cpp  poll2.cpp  poll2_core.cpp
Acquisition/Setup/include/: utilities.h
Acquisition/Setup/source/: CMakeLists.txt  adjust_offsets.cpp  boot.cpp  copy_params.cpp  find_tau.cpp  get_traces.cpp  paramScan.cpp  pmread.cpp  pmwrite.cpp  pread.cpp  pwrite.cpp  rate.cpp  set_hybrid.cpp  set_pileups_only.cpp  set_pileups_reject.cpp  set_standard.cpp  toggle.cpp  trace.cpp
Acquisition/Utilities/DataGenerator/: CMakeLists.txt
Acquisition/Utilities/DataGenerator/source/: CMakeLists.txt  dataGenerator.cpp
Acquisition/set2root/source/: CMakeLists.txt
Analysis/: CMakeLists.txt
Analysis/Resources/include/: CfdConfiguration.hpp  ChannelConfiguration.hpp  DefaultConfigurationValues.hpp  GslFitter.hpp  PolynomialCfd.hpp  RootFitter.hpp  TimingConfiguration.hpp  TimingDriver.hpp  TraditionalCfd.hpp  XiaCfd.hpp
Analysis/Resources/source/: CMakeLists.txt  CfdConfiguration.cpp  ChannelConfiguration.cpp  Gsl1Fitter.cpp  GslFitter.cpp  PolynomialCfd.cpp  RootFitter.cpp  TimingConfiguration.cpp  TraditionalCfd.cpp  XiaCfd.cpp
Analysis/Resources/tests/: CMakeLists.txt  unittest-ChannelConfiguration.cpp  unittest-GslFitter.cpp  unittest-PolynomialCfd.cpp  unittest-RootFitter.cpp  unittest-TraditionalCfd.cpp  unittest-XiaCfd.cpp
Analysis/ScanLibraries/: CMakeLists.txt
Analysis/ScanLibraries/include/: ScanInterface.hpp  XiaData.hpp  XiaListModeDataDecoder.hpp  XiaListModeDataEncoder.hpp  XiaListModeDataMask.hpp
Analysis/ScanLibraries/source/: ScanInterface.cpp  Unpacker.cpp  XiaData.cpp  XiaListModeDataDecoder.cpp  XiaListModeDataEncoder.cpp  XiaListModeDataMask.cpp
Analysis/ScanLibraries/tests/: CMakeLists.txt  unittest-Trace.cpp  unittest-XiaData.cpp  unittest-XiaListModeDataDecoder.cpp  unittest-XiaListModeDataEncoder.cpp  unittest-XiaListModeDataMask.cpp
Analysis/Scanor/source/: CMakeLists.txt
Analysis/Utilities/: CMakeLists.txt
Analysis/Utilities/EventReader/source/: CMakeLists.txt  EventReaderUnpacker.cpp  eventReader.cpp
Analysis/Utilities/HexReader/: CMakeLists.txt
Analysis/Utilities/HexReader/source/: CMakeLists.txt  hexReader.cpp
Analysis/Utilities/RootScanner/source/: CMakeLists.txt  HistScannerChanData.cpp
Analysis/Utilities/Scope/include/: ScopeUnpacker.hpp
Analysis/Utilities/Scope/source/: ScopeScanner.cpp  ScopeUnpacker.cpp
Analysis/Utkscan/: CMakeLists.txt
Analysis/Utkscan/analyzers/include/: TraceAnalyzer.hpp
Analysis/Utkscan/analyzers/source/: CMakeLists.txt  CfdAnalyzer.cpp  FittingAnalyzer.cpp  TraceExtractor.cpp  TraceFilterAnalyzer.cpp  WaaAnalyzer.cpp
Analysis/Utkscan/core/include/: DetectorDriver.hpp  Globals.hpp  HighResTimingData.hpp  MapNodeXmlParser.hpp  PlaceBuilder.hpp  Plots.hpp  RootHandler.hpp  TreeCorrelator.hpp  UtkScanInterface.hpp  UtkUnpacker.hpp
Analysis/Utkscan/core/source/: CMakeLists.txt  Calibrator.cpp  DetectorDriver.cpp  DetectorDriverXmlParser.cpp  Globals.cpp  GlobalsXmlParser.cpp  HisFile.cpp  MapNodeXmlParser.cpp  PlaceBuilder.cpp  Places.cpp  Plots.cpp  PlotsRegister.cpp  RootHandler.cpp  TimingCalibrator.cpp  TreeCorrelator.cpp  UtkScanInterface.cpp  UtkUnpacker.cpp  WalkCorrector.cpp  utkscan.cpp  utkscanor.cpp
Analysis/Utkscan/core/tests/: CMakeLists.txt  unittest-RootHandler.cpp
Analysis/Utkscan/experiment/include/: Anl1471Processor.hpp  BaGeLProcessor.hpp  IS600Processor.hpp  TemplateExpProcessor.hpp  TwoChanTimingProcessor.hpp
Analysis/Utkscan/experiment/source/: Anl1471Processor.cpp  BaGeLProcessor.cpp  CMakeLists.txt  IS600Processor.cpp  SheCorrelator.cpp  TemplateExpProcessor.cpp  TwoChanTimingProcessor.cpp  VandleOrnl2012Processor.cpp
Analysis/Utkscan/processors/include/: EventProcessor.hpp  IonChamberProcessor.hpp
Analysis/Utkscan/processors/source/: BetaScintProcessor.cpp  CMakeLists.txt  CloverCalibProcessor.cpp  CloverProcessor.cpp  DoubleBetaProcessor.cpp  DssdProcessor.cpp  GeProcessor.cpp  Hen3Processor.cpp  ImplantSsdProcessor.cpp  IonChamberProcessor.cpp  LiquidScintProcessor.cpp  LitePositionProcessor.cpp  LogicProcessor.cpp  McpProcessor.cpp  NeutronScintProcessor.cpp  PositionProcessor.cpp  PspmtProcessor.cpp  TeenyVandleProcessor.cpp  TemplateProcessor.cpp  VandleProcessor.cpp
Cmake/modules/: FindGSL.cmake  FindXIA.cmake
Core/include/: CTerminal.h  hribf_buffers.h
Core/source/: CTerminal.cpp  hribf_buffers.cpp
Core/tests/: CTerminalTest.cpp
Resources/include/: CerrDirector.hpp  Constants.hpp  HelperEnumerations.hpp  HelperFunctions.hpp  Messenger.hpp  PaassExceptions.hpp  StringManipulationFunctions.hpp  UnitTestSampleData.hpp  XmlInterface.hpp
Resources/source/: CMakeLists.txt  CerrDirector.cpp  Notebook.cpp  XmlInterface.cpp
Resources/tests/: CMakeLists.txt  unittest-HelperFunctions.cpp  unittest-StringManipulationFunctions.cpp
(+2 files in other folders)
